既存ソースコードの見直しを実施